# scratch-test-yew

./: Cargo.toml  flake.nix  index.html
assets/fonts/: MaterialIconsOutlined-Regular.css  setup-style.js
src/: api.rs  components.rs  main.rs  messages.rs  routes.rs
src/components/: exercise.rs  file_upload.rs  landing.rs  not_found.rs
src/messages/: hub.rs  message.rs  message_icon.rs
src/report/: category.rs  mod.rs
src/testcase/: case.rs  case_criterion.rs  case_status.rs  mod.rs
src/utils/: mod.rs
style/: _index.scss  case_parts.scss  messages.scss  report.scss  testcase.scss  upload.scss  utils.scss
