[package]
name = "scratch-test-yew"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
gloo = "0.11.0"
gloo-file = "0.3.0"
js-sys = "0.3.81"
log = "0.4.28"
wasm-bindgen-futures = "0.4.54"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.81", features = ["DataTransfer", "MediaQueryList", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

derive_more = { version = "2.0.1", features = ["display"] }
serde_json = "1.0.150"
reqwasm = "0.5.0"
thiserror = "2.0.18"
serde = "1.0.228"

[dependencies.sreport]
git = "https://github.com/Marcel-Scherzinger/scratch-test-report.git"
package = "scratch-test-report"
features = ["serde"]

[dependencies.smodel]
git = "https://github.com/Marcel-Scherzinger/scratch-test-model.git"
package = "scratch-test-model"
features = ["sb3"]

[dependencies.svalue]
git = "https://github.com/Marcel-Scherzinger/scratch-test-value.git"
package = "scratch-test-value"

